--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(DungeonCrawler)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(DungeonCrawler main.cpp)
+file(GLOB SOURCES "*.cpp")
+add_executable(MeuJogo ${SOURCES})
